Bug 465137 - Share multiple selected files shares only last selected
Summary: Share multiple selected files shares only last selected
Status: RESOLVED FIXED
Alias: None
Product: gwenview
Classification: Applications
Component: general (other bugs)
Version First Reported In: 22.12.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Gwenview Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-02-01 18:34 UTC by arne anka
Modified: 2023-02-06 16:27 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 22.12.3
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description arne anka 2023-02-01 18:34:26 UTC
SUMMARY
"Share" multiple selected files shares only last selected.

STEPS TO REPRODUCE
1. open folder w/ multiple images
2. select more than one image
3. click "Share"
4. select "Send to device ..."
5. in the upcoming dialog select device
6. only the last selected image is actually sent

OBSERVED RESULT


EXPECTED RESULT


SOFTWARE/OS VERSIONS
Windows: 
macOS: 
Linux/KDE Plasma: 
(available in About System)
KDE Plasma Version: 
KDE Frameworks Version: 
Qt Version: 

ADDITIONAL INFORMATION
Comment 1 Justin Zobel 2023-02-02 01:12:43 UTC
Confirmed with Nextcloud and Telegram shares, it only sends one file.
Comment 2 Bug Janitor Service 2023-02-05 16:51:01 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/gwenview/-/merge_requests/182
Comment 3 Nate Graham 2023-02-06 16:04:48 UTC
Git commit dc4199a7d24f49cf9893b716b9fdaf3f8910ec2d by Nate Graham, on behalf of Nicolas Fella.
Committed on 06/02/2023 at 15:54.
Pushed by ngraham into branch 'master'.

Share all selected URLs

Instead of only a single current one

When viewing a single image it's implicitly selected

M  +10   -3    app/mainwindow.cpp

https://invent.kde.org/graphics/gwenview/commit/dc4199a7d24f49cf9893b716b9fdaf3f8910ec2d
Comment 4 Nate Graham 2023-02-06 16:07:01 UTC
Git commit f59613940f7c6cf36adee99e659c5358ea4acae9 by Nate Graham, on behalf of Nicolas Fella.
Committed on 06/02/2023 at 16:06.
Pushed by ngraham into branch 'cherry-pick-dc4199a7'.

Share all selected URLs

Instead of only a single current one

When viewing a single image it's implicitly selected


(cherry picked from commit dc4199a7d24f49cf9893b716b9fdaf3f8910ec2d)

M  +10   -3    app/mainwindow.cpp

https://invent.kde.org/graphics/gwenview/commit/f59613940f7c6cf36adee99e659c5358ea4acae9