Share all selected URLs

Instead of only a single current one

When viewing a single image it's implicitly selected

BUG: 465137